removed group, only user

--- a/whatshap/Dockerfile
+++ b/whatshap/Dockerfile
@@ -14,20 +14,19 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install WhatsHap using pip
-RUN pip3 install --no-cache-dir --upgrade pip whatshap 
+RUN pip3 install --no-cache-dir --upgrade pip whatshap
 
-# Create a group with GID 1 and user with UID 1000
-RUN groupadd -g 1 group && \
-    useradd -m -u 1000 -g 1 -s /bin/bash user
+# Create a non-root user with UID 1000 (group will be auto-created)
+RUN useradd -m -u 1000 -s /bin/bash user
 
 # Set working directory
 WORKDIR /app
 
 # Ensure the directory is owned by the new user
-RUN chown user:group /app
+RUN chown user:user /app
 
-# Switch to the created non-root user (UID 1000, GID 1)
-USER 1000:1
+# Switch to the created non-root user
+USER 1000
 
 # Default command
 CMD ["bash"]
