--- a/.github/workflows/whatshap.yml
+++ b/.github/workflows/whatshap.yml
@@ -28,5 +28,5 @@ jobs:
           context: ./whatshap
           file: ./whatshap/Dockerfile
           push: true
-          tags: whatshap-image:v1.0
+          tags: ${{ secrets.USER_NAME }}/whatshap-image:v1.0
           no-cache: true
