--- a/.github/workflows/r-dnacopy-image.yml
+++ b/.github/workflows/r-dnacopy-image.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # You can change this to the branch you want to trigger the workflow
+    paths: rdocker/**
 
 jobs:
   build:
