--- a/.github/workflows/cuteSV.yml
+++ b/.github/workflows/cuteSV.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.USER_NAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
         id: build-and-push
@@ -31,6 +31,6 @@ jobs:
           file: ./cuteSV/Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/cutesv-image:v1.0
-            ${{ secrets.DOCKER_USERNAME }}/cutesv-image:${{ github.sha }}
+            tags: ${{ secrets.USER_NAME }}/cutesv-image:v1.0
+            ${{ secrets.USER_NAME }}/cutesv-image:${{ github.sha }}
           no_cache: true  # Disable caching for each build
