--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+    - py_container/**
 
 jobs:
   build:
@@ -25,5 +27,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
+        context: ./py_container
+        file: ./py_container/Dockerfile
         push: true
         tags: ${{ secrets.USER_NAME }}/py_containers:latest
