dockerfile for pod5 and rsync

--- a/pod5/Dockerfile
+++ b/pod5/Dockerfile
@@ -1,4 +1,4 @@
-# Use the existing Pod5 container as base
+# Use the existing Pod5
 FROM quay.io/biocontainers/pod5:0.3.33--pyhdfd78af_0
 
 # Install rsync
