--- a/minimap/Dockerfile
+++ b/minimap/Dockerfile
@@ -1,49 +1,70 @@
+# ------------------------------------------------------------
+#  Dockerfile: samtools + minimap2 (latest versions)
+# ------------------------------------------------------------
+#   Base image
 FROM ubuntu:22.04
 
-LABEL description="Image with minimap2 v2.30 and samtools v1.20"
+#   Metadata
+LABEL description="Ubuntu 22.04 image with the latest Samtools and Minimap2 built from source."
 
-# Install dependencies
-RUN apt-get update && apt-get install -y \
-    git \
-    curl \
-    make \
-    gcc \
-    g++ \
-    zlib1g-dev \
-    libbz2-dev \
-    liblzma-dev \
-    libcurl4-openssl-dev \
-    wget \
-    tar \
-    bzip2 \
-    xz-utils \
-    pkg-config \
-    && rm -rf /var/lib/apt/lists/*
+# ------------------------------------------------------------
+#   1. Install system‑level build dependencies
+# ------------------------------------------------------------
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        ca-certificates \
+        wget \
+        curl \
+        gnupg \
+        build-essential \
+        libncurses5-dev \
+        libncursesw5-dev \
+        zlib1g-dev \
+        libbz2-dev \
+        liblzma-dev \
+        libcurl4-gnutls-dev \
+        libssl-dev \
+        libgomp1 \
+        python3 \
+        python3-pip \
+        git && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install Samtools (without curses for tview)
-RUN curl -L -o samtools-1.20.tar.bz2 https://github.com/samtools/samtools/releases/download/1.20/samtools-1.20.tar.bz2 \
-    && tar -xjf samtools-1.20.tar.bz2 \
-    && cd samtools-1.20 \
-    && ./configure --prefix=/usr/local --without-curses \
-    && make -j"$(nproc)" && make install \
-    && cd .. && rm -rf samtools-1.20 samtools-1.20.tar.bz2
+# ------------------------------------------------------------
+#   2. Install the latest Samtools (compiled from source)
+# ------------------------------------------------------------
+ARG SAMTOOLS_REPO="https://github.com/samtools/samtools.git"
+ARG SAMTOOLS_TAG="master"          # change to a tag/branch if you want a specific release
 
-# Install Minimap2 v2.30
-RUN curl -L -o minimap2-2.30.tar.bz2 https://github.com/lh3/minimap2/releases/download/v2.30/minimap2-2.30.tar.bz2 \
-    && tar -xjf minimap2-2.30.tar.bz2 \
-    && cd minimap2-2.30 \
-    && make -j"$(nproc)" \
-    && cp minimap2 /usr/local/bin/ \
-    && cd .. && rm -rf minimap2-2.30 minimap2-2.30.tar.bz2
+RUN git clone --depth 1 --branch ${SAMTOOLS_TAG} ${SAMTOOLS_REPO} /opt/samtools && \
+    cd /opt/samtools && \
+    make -j$(nproc) && \
+    make install && \
+    cd / && \
+    rm -rf /opt/samtools
 
-# Create non-root user
-RUN useradd -m -u 1000 -s /bin/bash user
+# ------------------------------------------------------------
+#   3. Install the latest Minimap2 (compiled from source)
+# ------------------------------------------------------------
+ARG MINIMAP2_REPO="https://github.com/lh3/minimap2.git"
+ARG MINIMAP2_TAG="master"          # change to a tag/branch if you want a specific release
 
-# Set working directory
-WORKDIR /app
-RUN chown user:user /app
+RUN git clone --depth 1 --branch ${MINIMAP2_TAG} ${MINIMAP2_REPO} /opt/minimap2 && \
+    cd /opt/minimap2 && \
+    make -j$(nproc) && \
+    cp minimap2 mm2-fast mm2-precise /usr/local/bin/ && \
+    cd / && \
+    rm -rf /opt/minimap2
 
-# Switch to non-root user
-USER 1000
+# ------------------------------------------------------------
+#   4. Verify installations (optional but nice for debugging)
+# ------------------------------------------------------------
+RUN samtools --version && \
+    minimap2 --version
 
+# ------------------------------------------------------------
+#   5. Set a minimal entrypoint (allows the container to be used
+#      as a command‑line tool collection)
+# ------------------------------------------------------------
 ENTRYPOINT ["/bin/bash"]
