--- a/minimap/Dockerfile
+++ b/minimap/Dockerfile
@@ -3,20 +3,16 @@
 # ------------------------------------------------------------
 FROM ubuntu:22.04
 
-# -----------------------------------------------------------------
-#  Metadata
-# -----------------------------------------------------------------
+LABEL maintainer="Your Name <you@example.com>"
 LABEL description="Ubuntu 22.04 image with the latest Samtools & Minimap2 built from source, running as a non‑root user."
 
-# -----------------------------------------------------------------
-#  Environment
-# -----------------------------------------------------------------
-# Turn off interactive prompts during apt install
 ENV DEBIAN_FRONTEND=noninteractive
 
 # -----------------------------------------------------------------
 #  Install build‑time system packages
 # -----------------------------------------------------------------
+# The back‑slashes below are *exactly* at the end of each line – no trailing spaces,
+# no comments after them.
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         ca-certificates \
@@ -24,11 +20,17 @@ RUN apt-get update && \
         curl \
         gnupg \
         build-essential \                # gcc, make, etc.
-        libncurses5-dev libncursesw5-dev \
-        zlib1g-dev libbz2-dev liblzma-dev \
-        libcurl4-gnutls-dev libssl-dev libgomp1 \
+        libncurses5-dev \
+        libncursesw5-dev \
+        zlib1g-dev \
+        libbz2-dev \
+        liblzma-dev \
+        libcurl4-gnutls-dev \
+        libssl-dev \
+        libgomp1 \
         git \                            # needed for cloning the sources
-        python3 python3-pip && \
+        python3 \
+        python3-pip && \
     rm -rf /var/lib/apt/lists/*
 
 # -----------------------------------------------------------------
@@ -70,13 +72,11 @@ RUN samtools --version && minimap2 --version
 # -----------------------------------------------------------------
 #  Create a non‑root user
 # -----------------------------------------------------------------
-# 1000 is the conventional UID for the first regular user on a system.
-# The user is added to the "app" group (GID 1000) and gets a login shell.
 RUN groupadd -g 1000 app && \
     useradd -m -u 1000 -g app -s /bin/bash appuser
 
 # -----------------------------------------------------------------
-#  Set the working directory (owned by the non‑root user)
+#  Working directory owned by the non‑root user
 # -----------------------------------------------------------------
 WORKDIR /app
 RUN chown appuser:app /app
@@ -87,6 +87,6 @@ RUN chown appuser:app /app
 USER appuser
 
 # -----------------------------------------------------------------
-#  Default command – a shell so the container can be used as a toolbox
+#  Default entrypoint – a shell so the image can be used as a toolbox
 # -----------------------------------------------------------------
 ENTRYPOINT ["/bin/bash"]
