--- a/minimap/Dockerfile
+++ b/minimap/Dockerfile
@@ -1,92 +1,75 @@
 # ------------------------------------------------------------
-#  Dockerfile: samtools + minimap2 (latest) + non‑root user
+#  Docker image: latest Minimap2 + latest stable Samtools
+#  Ubuntu 22.04 base, non‑root user, /data as workdir
 # ------------------------------------------------------------
 FROM ubuntu:22.04
 
-LABEL maintainer="Your Name <you@example.com>"
-LABEL description="Ubuntu 22.04 image with the latest Samtools & Minimap2 built from source, running as a non‑root user."
-
-ENV DEBIAN_FRONTEND=noninteractive
+LABEL description="Docker image with the latest Minimap2 and Samtools (built from source)."
 
 # -----------------------------------------------------------------
-#  Install build‑time system packages
+#  Environment
 # -----------------------------------------------------------------
-# The back‑slashes below are *exactly* at the end of each line – no trailing spaces,
-# no comments after them.
+ENV DEBIAN_FRONTEND=noninteractive \
+    # make sure the binaries we install go into the PATH
+    PATH="/usr/local/bin:${PATH}"
+
+# -----------------------------------------------------------------
+#  Install system‑level build dependencies
+# -----------------------------------------------------------------
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         ca-certificates \
         wget \
         curl \
         gnupg \
+        git \
         build-essential \
-        libncurses5-dev \
-        libncursesw5-dev \
         zlib1g-dev \
         libbz2-dev \
         liblzma-dev \
-        libcurl4-gnutls-dev \
+        libcurl4-openssl-dev \
+        libncurses5-dev libncursesw5-dev \
         libssl-dev \
-        libgomp1 \
-        git \
-        python3 \
-        python3-pip && \
+        libgomp1 && \
     rm -rf /var/lib/apt/lists/*
 
 # -----------------------------------------------------------------
-#  Build Samtools (clone with sub‑modules)
+#  Install Minimap2 (latest master branch)
 # -----------------------------------------------------------------
-ARG SAMTOOLS_REPO="https://github.com/samtools/samtools.git"
-ARG SAMTOOLS_TAG="master"
+WORKDIR /opt
+RUN git clone --depth 1 https://github.com/lh3/minimap2.git && \
+    cd minimap2 && \
+    make -j$(nproc) && \
+    cp minimap2 /usr/local/bin/ && \
+    cd .. && rm -rf minimap2
 
-RUN git clone --depth 1 \
-              --branch ${SAMTOOLS_TAG} \
-              --recurse-submodules \
-              ${SAMTOOLS_REPO} /opt/samtools && \
-    cd /opt/samtools && \
+# -----------------------------------------------------------------
+#  Install Samtools (latest stable release) – built from source
+# -----------------------------------------------------------------
+# 1️⃣  Clone Samtools **with its htslib sub‑module**
+# 2️⃣  Build & install
+WORKDIR /opt
+RUN git clone --depth 1 --branch master \
+              --recurse-submodules https://github.com/samtools/samtools.git && \
+    cd samtools && \
+    ./configure --prefix=/usr/local && \
     make -j$(nproc) && \
     make install && \
-    cd / && \
-    rm -rf /opt/samtools
+    cd .. && rm -rf samtools
 
 # -----------------------------------------------------------------
-#  Build Minimap2 (latest master – change TAG if you prefer a fixed version)
-# -----------------------------------------------------------------
-ARG MINIMAP2_REPO="https://github.com/lh3/minimap2.git"
-ARG MINIMAP2_TAG="master"
-
-RUN git clone --depth 1 \
-              --branch ${MINIMAP2_TAG} \
-              ${MINIMAP2_REPO} /opt/minimap2 && \
-    cd /opt/minimap2 && \
-    make -j$(nproc) && \
-    cp minimap2 mm2-fast mm2-precise /usr/local/bin/ && \
-    cd / && \
-    rm -rf /opt/minimap2
-
-# -----------------------------------------------------------------
-#  Verify that the binaries are present (optional but helpful)
-# -----------------------------------------------------------------
-RUN samtools --version && minimap2 --version
-
-# -----------------------------------------------------------------
-#  Create a non‑root user
+#  Create a non‑root user (UID 1000) and set ownership of /data
 # -----------------------------------------------------------------
 RUN groupadd -g 1000 app && \
     useradd -m -u 1000 -g app -s /bin/bash appuser
 
 # -----------------------------------------------------------------
-#  Working directory owned by the non‑root user
+#  Working directory (where users will drop their files)
 # -----------------------------------------------------------------
-WORKDIR /app
-RUN chown appuser:app /app
+WORKDIR /data
+RUN chown appuser:app /data
 
 # -----------------------------------------------------------------
 #  Switch to the non‑root user for the rest of the container life‑time
 # -----------------------------------------------------------------
 USER appuser
-
-# -----------------------------------------------------------------
-#  Default entrypoint – a shell so the image can be used as a toolbox
-# -----------------------------------------------------------------
-ENTRYPOINT ["/bin/bash"]
